[package]
name = "tss_bridge_node_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.50.0", features = ["full"] } 
futures="0.3.25"
dkg = {git="https://github.com/serai-dex/serai"}
modular-frost = {git="https://github.com/serai-dex/serai", features= ["ed25519"]}
rand = "0.8.5"
hex="0.4.3"
async-std = { version = "1.10.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigint = "4.4.3"